perf: 优化代码逻辑，去除多余代码